Atualizando controllers e rotas
