# content/controllers/inicio.controllers.js
@@ -1,5 +1,6 @@
 const bcrypt = require('bcryptjs');
 const jwt = require('jsonwebtoken');
+const { v4: uuid } = require('uuid');
 const Usuario = require('../models/usuarios.models');
 
 function boasVindas(req, res) {
@@ -24,14 +25,16 @@ async function registrar(req, res) {
 		});
 	}
 
-	const novoUsuario = { email, senha, nome };
+	const novoUsuario = { _id: uuid(), email, senha, nome };
 	novoUsuario.senha = bcrypt.hashSync(novoUsuario.senha, 10);
 
 	await new Usuario(novoUsuario)
 		.save()
 		.then((documento) => {
 			documento.senha = undefined;
-			return res.status(201).json({ Mensagem: 'Novo usuário registrado com sucesso!', Usuario: documento });
+			return res
+				.status(201)
+				.json({ Mensagem: 'Novo usuário registrado com sucesso!', Usuario: documento });
 		})
 		.catch((error) => {
 			const msgErro = {};
@@ -76,12 +79,12 @@ async function entrar(req, res) {
 
 			const segredo = process.env.SEGREDO;
 			const token = jwt.sign({ id: documento._id }, segredo, { expiresIn: 600 });
-			const idUsuario = documento._id;
 
-			res.cookie('idUsuario', idUsuario, { maxAge: 600000, httpOnly: true });
 			res.cookie('tokenUsuario', token, { maxAge: 600000, httpOnly: true });
 
-			return res.status(200).json({ Mensagem: 'Autenticação realizada com sucesso!', token });
+			return res
+				.status(200)
+				.json({ Mensagem: 'Autenticação realizada com sucesso!', Token: token });
 		})
 		.catch((error) => {
 			return res.status(500).json({ Erro: 'Erro interno na aplicação!' });
@@ -89,7 +92,6 @@ async function entrar(req, res) {
 }
 
 async function sair(req, res) {
-	res.clearCookie('idUsuario', { path: '/', domain: 'localhost' });
 	res.clearCookie('tokenUsuario', { path: '/', domain: 'localhost' });
 	res.status(200).json({ Mensagem: 'Usuário desconectou-se da aplicação com sucesso!' });
 }
