# content/controllers/usuarios.controllers.js
@@ -1,5 +1,8 @@
 const bcrypt = require('bcryptjs');
 const Usuario = require('../models/usuarios.models');
+const Anuncio = require('../models/anuncios.models');
+const Pet = require('../models/pets.models');
+const jwt = require('jsonwebtoken');
 
 async function consultaUsuarios(req, res) {
 	await Usuario.find({})
@@ -11,26 +14,44 @@ async function consultaUsuarios(req, res) {
 		});
 }
 
+async function consultaUsuarioIdAdmin(req, res) {
+	await Usuario.findOne({ _id: req.params.id })
+		.then((usuario) => {
+			if (usuario) {
+				return res.status(200).json(usuario);
+			} else {
+				return res.status(404).json({ Erro: 'Usuário não localizado!' });
+			}
+		})
+		.catch((error) => {
+			return res.status(500).json({ Erro: 'Erro interno na aplicação!' });
+		});
+}
+
 async function consultaUsuarioId(req, res) {
-	if (req.params.id !== req.cookies.idUsuario) {
-		return res.status(404).json({ Erro: 'O ID informado é diferente do usuário logado!' });
-	} else {
-		await Usuario.findOne({ _id: req.cookies.idUsuario })
-			// .select('+senha')
-			.then((usuario) => {
-				if (usuario) {
-					return res.status(200).json(usuario);
-				} else {
-					return res.status(404).json({ Erro: 'Usuário não localizado!' });
-				}
-			})
-			.catch((error) => {
-				return res.status(500).json({ Erro: 'Erro interno na aplicação!' });
-			});
-	}
+	const token = req.cookies.tokenUsuario;
+	const segredo = process.env.SEGREDO;
+	const payload = jwt.verify(token, segredo);
+
+	await Usuario.findOne({ _id: payload.id })
+		.select('+senha')
+		.then((usuario) => {
+			if (usuario) {
+				return res.status(200).json(usuario);
+			} else {
+				return res.status(404).json({ Erro: 'Usuário não localizado!' });
+			}
+		})
+		.catch((error) => {
+			return res.status(500).json({ Erro: 'Erro interno na aplicação!' });
+		});
 }
 
 async function atualizaUsuario(req, res) {
+	const token = req.cookies.tokenUsuario;
+	const segredo = process.env.SEGREDO;
+	const payload = jwt.verify(token, segredo);
+
 	const { email, senha, nome } = req.body;
 
 	if (!email && !senha && !nome) {
@@ -52,7 +73,7 @@ async function atualizaUsuario(req, res) {
 		novoUsuario.senha = bcrypt.hashSync(novoUsuario.senha, 10);
 	}
 
-	await Usuario.findOneAndUpdate({ _id: req.params.id }, novoUsuario, { runValidators: true })
+	await Usuario.findOneAndUpdate({ _id: payload.id }, novoUsuario, { runValidators: true })
 		.then((documento) => {
 			if (documento) {
 				return res.status(200).json({ Mensagem: 'Usuário atualizado com sucesso!' });
@@ -70,9 +91,19 @@ async function atualizaUsuario(req, res) {
 }
 
 async function deletaUsuario(req, res) {
-	await Usuario.findOneAndDelete({ _id: req.params.id })
-		.then((documento) => {
+	const token = req.cookies.tokenUsuario;
+	const segredo = process.env.SEGREDO;
+	const payload = jwt.verify(token, segredo);
+
+	await Usuario.findOneAndDelete({ _id: payload.id })
+		.then(async (documento) => {
 			if (documento) {
+				for (let i = 0; i < documento.anuncios.length; i += 1) {
+					await Anuncio.deleteOne({ _id: documento.anuncios[i] });
+				}
+				for (let i = 0; i < documento.pets.length; i += 1) {
+					await Pet.deleteOne({ _id: documento.pets[i] });
+				}
 				return res.status(200).json({ Mensagem: 'Usuário deletado com sucesso!' });
 				// return res.redirect('/');
 			} else {
@@ -89,6 +120,7 @@ async function deletaUsuario(req, res) {
 
 module.exports = {
 	consultaUsuarios,
+	consultaUsuarioIdAdmin,
 	consultaUsuarioId,
 	atualizaUsuario,
 	deletaUsuario,
