# content/routes/usuarios.router.js
@@ -9,19 +9,19 @@ router
 	.route('/usuarios')
 	.get(usuariosCTRL.consultaUsuarios);
 
-// router
-// 	// GET /usuarios/:id_U/ -> Permite que qualquer pessoa consulte um usuário específico
-// 	.route('/usuario/:id_U/')
-// 	.get(middleware.validaIdUsuario, usuariosCTRL.consultaUsuarioId);
+router
+	// GET /usuarios/:id_U/ -> Permite que qualquer pessoa consulte um usuário específico
+	.route('/usuario/:id')
+	.get(middleware.validaIdUsuario, usuariosCTRL.consultaUsuarioIdAdmin);
 
 // ROTAS PRIVADAS RELATIVAS AO PRÓPRIO USUÁRIO
 router
 	// GET /usuarios/:id_U/ -> Permite que o usuário logado consulte seus próprios dados
 	// PATCH /usuarios/:id_U/ -> Permite que o usuário logado atualize seus próprios dados
 	// DELETE /usuarios/:id_U/ -> Permite que o usuário logado detele sua própria conta
-	.route('/usuario/:id')
-	.get(middleware.validaToken, middleware.validaIdUsuario, usuariosCTRL.consultaUsuarioId)
-	.patch(middleware.validaToken, middleware.validaIdUsuario, usuariosCTRL.atualizaUsuario)
-	.delete(middleware.validaToken, middleware.validaIdUsuario, usuariosCTRL.deletaUsuario);
+	.route('/usuario')
+	.get(middleware.validaToken, usuariosCTRL.consultaUsuarioId)
+	.patch(middleware.validaToken, usuariosCTRL.atualizaUsuario)
+	.delete(middleware.validaToken, usuariosCTRL.deletaUsuario);
 
 module.exports = router;
